* Attempting to resolve issue with header render on mobile.

--- a/styles/common.css
+++ b/styles/common.css
@@ -42,6 +42,8 @@ a:hover {
     border-bottom: 1px solid rgb(40, 40, 40);
     position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
     height: 50px;
     width: 100%;
     box-shadow: 0 1px 8px 1px rgba(0, 0, 0, 0.6);
